--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -168,7 +168,7 @@
               style="z-index: -1;"
               #itemElement
               [ngClass]="changeColorDrag(null, d)"
-              [ngStyle]="changePosition(d)"
+              [ngStyle]="(d.sign_unit != 'chu_ky_anh' && d.sign_unit != 'chu_ky_so_con_dau_va_thong_tin') ? changePosition(d) : changePositionSignature(d)"
               *ngIf="d.type==2 || d.type==3 || (d.type!==2 && d.type!==3 && d.value)"
               >
             <div *ngIf="d.sign_unit != 'text' && d.sign_unit != 'so_tai_lieu'" class="name-sig-img-daky long-text-ellipsis">{{(d.name && !d.value) ? d.name : ''}}</div>
