--- a/src/app/main/contract-signature/contract-signature.component.scss
+++ b/src/app/main/contract-signature/contract-signature.component.scss
@@ -436,7 +436,7 @@ input::placeholder{
   font-size: 13px;
   // margin: 0 10px;
   font-weight: 700;
-  box-shadow: 0px 3px 12px 0px #1055E11A;
+  // box-shadow: 0px 3px 12px 0px #1055E11A;
   border: 1px solid #001A4D1A
 }
 
