--- a/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.html
@@ -1,18 +1,54 @@
-<div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
-    <div class="stamp-content" *ngIf="!checkShowEdit && !sign.valueSign">
-      <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
-        alt="mobifone.contract">
-    </div>
-    <div class="sign-info-content">
-      <span style="color: #106DB6;" *ngIf="sign.sign_unit == 'chu_ky_anh'; then content else other_content"></span>
-      <ng-template #content>Thông tin chữ ký ảnh</ng-template>
-      <ng-template #other_content>Thông tin chữ ký số</ng-template>
-    </div>
+<!-- <div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
+  <div class="stamp-content" *ngIf="!checkShowEdit && !sign.valueSign">
+    <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
+      alt="mobifone.contract">
   </div>
-  
-  <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">  
-    <div class="skeleton-sign">
-      <span id="input-text">{{(sign.sign_unit == 'text') ? 'Text' : 'Số hợp đồng'}}</span>
-    </div>
+  <div class="sign-info-content">
+    <span style="color: #106DB6;" *ngIf="sign.sign_unit == 'chu_ky_anh'; then content else other_content"></span>
+    <ng-template #content>Thông tin chữ ký ảnh</ng-template>
+    <ng-template #other_content>Thông tin chữ ký số</ng-template>
   </div>
+</div> -->
+
+<div *ngIf="sign.sign_unit == 'chu_ky_anh'" class="content">
+  <div class="stamp-content item-left">
+    <img src='assets/img/stamp.svg' alt="mobifone.contract">
+    <div class="font-sign">Chữ ký ảnh</div>
+  </div>
+  <div class="sign-info-content item-right">
+    <img src='assets/img/only_info.svg' alt="mobifone.contract">
+    <div class="font-sign">Thông tin chữ ký ảnh</div>
+  </div>
+</div>
+
+<div *ngIf="sign.sign_unit == 'chu_ky_so_con_dau_va_thong_tin'" class="content">
+  <div class="stamp-content item-left">
+    <img src='assets/img/stamp.svg' alt="mobifone.contract">
+    <div class="font-sign">Con dấu/ Chữ ký</div>
+  </div>
+  <div class="sign-info-content item-right">
+    <img src='assets/img/only_info.svg' alt="mobifone.contract">
+    <div class="font-sign">Thông tin chữ ký số</div>
+  </div>
+</div>
+
+<div *ngIf="sign.sign_unit == 'chu_ky_so_con_dau'" class="content">
+  <div class="stamp-content item-left" style="flex-basis: 100% !important; margin-right: 0px !important">
+    <img src='assets/img/stamp.svg' alt="mobifone.contract">
+    <div class="font-sign">Con dấu/ Chữ ký</div>
+  </div>
+</div>
+
+<div *ngIf="sign.sign_unit == 'chu_ky_so_thong_tin'" class="content">
+  <div class="sign-info-content item-right" style="flex-basis: 100% !important;">
+    <img src='assets/img/only_info.svg' alt="mobifone.contract">
+    <div class="font-sign">Thông tin chữ ký số</div>
+  </div>
+</div>
+
+<div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">  
+  <div class="skeleton-sign">
+    <span id="input-text">{{(sign.sign_unit == 'text') ? 'Text' : 'Số hợp đồng'}}</span>
+  </div>
+</div>
   
