--- a/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-template/detail-contract-template/image-sign-contract/image-sign-contract.component.scss
@@ -1,61 +1,151 @@
 .content {
-  height: 100%;
-  width: 100%;
-  border-radius: 6px;
-  display: flex;
+height: 100%;
+width: 100%;
+border-radius: 6px;
+display: flex;
 }
 .content .skeleton-sign {
-    //height: 102px;
-    display: flex;
-    // height: 100%;
-    // width: 100%;
-    // align-items: center;
-    // justify-content: center;
-    // flex-direction: column;
-  }
-  
-  .text-sign span {
-    width: 125px;
-    border: 0px;
-    height: 25px;
-    outline: none;
-    //color: #106DB6;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    max-width: 100px;
-    display: block;
-  }
-  
-  .input-edit-text {
-    width: 101%;
-    border: 1px solid #106DB6;
-    padding: 4px;
-    margin-left: -1px;
-    border-radius: 3px;
-  }
+  //height: 102px;
+  display: flex;
+  // height: 100%;
+  // width: 100%;
+  // align-items: center;
+  // justify-content: center;
+  // flex-direction: column;
+}
 
-  .stamp-content {
-    flex-basis: 33.33%;
-    background-color: #106DB6;
-    border-radius: 6px;
-    margin-right: 4px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .sign-info-content {
-    flex-basis: 66.66%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #EBF8FF;
-    border-radius: 6px;
-    color: #106DB6;
-    // font-family: Lexend Deca !important;
-    font-size: 9px;
-    font-weight: 400;
-    letter-spacing: 0px;
-  }
-  
+.text-sign span {
+  width: 125px;
+  border: 0px;
+  height: 25px;
+  outline: none;
+  //color: #106DB6;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100px;
+  display: block;
+}
+
+.input-edit-text {
+  width: 101%;
+  border: 1px solid #106DB6;
+  padding: 4px;
+  margin-left: -1px;
+  border-radius: 3px;
+}
+
+.stamp-content {
+  flex-basis: 33.33%;
+  background-color: #106DB6;
+  border-radius: 6px;
+  margin-right: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-info-content {
+  flex-basis: 66.66%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #EBF8FF;
+  border-radius: 6px;
+  color: #106DB6;
+  // font-family: Lexend Deca !important;
+  font-size: 9px;
+  font-weight: 400;
+  letter-spacing: 0px;
+}
+
+.content-item {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.item-left, .item-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.item-left {
+  background-color: #C7E8FA !important;
+}
+
+.item-right {
+  background-color: #E6EDFA !important;
+}
+
+.item img {
+  max-width: 100%; /* Đặt kích thước ảnh phù hợp */
+}
+
+.font-sign {
+  font-size: 6px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #286CF5;
+}
+.stamp-type {
+  background: #C7E8FA !important;
+}
+.left-stamp {
+  width: 40% ;
+  background: #C7E8FA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  flex: 1 1 auto;
+  margin: 2px;
+}
+.right-stamp {
+  width: 60%;display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  flex: 1 1 auto;
+  margin: 2px;
+  background: #E6EDFA;
+}
+.text-stamp {
+  color: #286CF5;
+  font-size: 6px
+}
+.stamp-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 33.33%;
+  background-color: #E6EDFA;
+  border-radius: 6px;
+  height: 100%;
+}
+.stamp-content1 {
+  align-items: center;
+  justify-content: center;
+  flex-basis: 33.33%;
+  background-color: #f4f6f9;
+  border-radius: 6px;
+  height: 100%;
+}
+.content .skeleton-sign {
+  width: 100%;
+  height: 100%;
+}
+.d-unset {
+  display: unset !important;
+}
