--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -605,3 +605,9 @@ input::placeholder{
     margin-top: 16px !important;
   }
 }
+
+::ng-deep .custom-tooltip.mat-tooltip {
+  margin-bottom: 10px !important;
+  white-space: normal !important;
+  max-width: 400px;
+}
