--- a/src/app/main/contract-signature/dialog/filter-list-dialog/filter-list-dialog.component.html
+++ b/src/app/main/contract-signature/dialog/filter-list-dialog/filter-list-dialog.component.html
@@ -64,6 +64,15 @@
                 </div>
             </div>
         </div>
+        
+        <div class="row" style="padding-top: 10px;">   
+          <div class="col-md-6">
+            <div class="label text-color">{{'name.email.create.contract' | translate}}</div>
+            <div class="input-data">
+                <input type="text" formControlName="name_or_email_customer">
+            </div>
+          </div>
+        </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'cancel' | translate}}</button>
