Thêm đóng mở thông tin chi tiết hợp đồng: Chi tiết HĐ, chi tiết HĐ mẫu, Ký

--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.scss
@@ -45,13 +45,13 @@
 }
 
 .footer-contract {
-  border-top: 1px solid #ddd;
+  //border-top: 1px solid #ddd;
   display: flex;
   align-items: center;
   height: 37px;
   //add css 16022022
   float: right;
-  width: 75%;
+  // width: 75%;
   padding-top: 2vh;
   .content_footer {
     color:#0160AE;
