--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -243,6 +243,14 @@ body {
   margin-top: 3px !important;
 }
 
+.mt-4px {
+  margin-top: 4px !important;
+}
+
+.mt-5px {
+  margin-top: 5px !important;
+}
+
 .mt-6px {
   margin-top: 6px !important;
 }
@@ -273,6 +281,10 @@ body {
 
 .mt-28px {
   margin-top: 28px !important;
+}
+
+.mgLeft-5px {
+  margin-left: 5px !important;
 }
 
 .text-so-hop-dong {
