--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.scss
@@ -1,5 +1,5 @@
 .sample-contract {
-  height: calc(100vh - 151px);
+  //height: calc(100vh - 151px);
 
   &__file {
     //position: relative;
@@ -28,7 +28,7 @@
 
 
   .viewer-pdf.isDrag {
-    height: calc(100vh - 151px);
+    height: calc(100vh - 200px);
     overflow-x: auto;
     text-align: center;
     background-color: rgba(239, 239, 239, 1);
@@ -61,9 +61,9 @@
         align-items: center
       }
 
-      .title-contract {
-        padding-right: 5px;
-      }
+      // .title-contract {
+      //   padding-right: 5px;
+      // }
 
       .show-list-name-class:nth-last-child(4) {
         //float: left;
@@ -79,18 +79,10 @@
       display: flex;
       flex-direction: column;
 
-      label {
-        padding-bottom: 13px;
-      }
-
       .name-text {
         display: flex;
         flex-direction: column;
         margin-bottom: 5px;
-
-        label {
-          padding-bottom: 5px;
-        }
 
         input {
           border-radius: 5px;
@@ -101,10 +93,6 @@
       }
 
       .sign-unit-select {
-        label {
-          padding-bottom: 5px;
-        }
-
         select {
           color: #333333;
           border: 1px solid #87CAFF;
@@ -168,13 +156,6 @@
     }
   }
 
-  .label {
-    font-size: 15px;
-    color: #106DB6;
-    font-style: normal;
-    font-weight: normal;
-  }
-
   .label-require {
     font-size: 13px;
     font-style: normal;
@@ -190,7 +171,7 @@
 .container-fluid{
   background-color: #FFFFFF;
   border-radius: 12px;
-  padding-top: 15px;
+  padding-top: 18px;
   min-height: 92vh;
 }
 
@@ -292,15 +273,16 @@
 }
 
 .action-button-previous {
-  width: 100px;
+  width: 120px;
+  height: 38px;
   background: #C5C5F1;
   font-weight: bold;
   color: white;
   border: 0 none;
-  border-radius: 5px;
+  border-radius: 6px;
   cursor: pointer;
-  padding: 10px 5px;
-  margin: 5px 5px;
+  padding: 8px 12px;
+  margin: 5px 0px;
 }
 
 .text-align-left {
@@ -412,14 +394,14 @@
   width: 100%;
   position: fixed;
   z-index: 1000;
-  left: 340px;
+  //left: 340px;
 }
 @media screen and (max-width:1440px){
   .zoom-in-out{
     width: 100%;
     position: fixed;
     z-index: 1000;
-    left: 250px;
+    //left: 250px;
   }
 }
 @media screen and (max-width:1366px){
@@ -427,7 +409,7 @@
     width: 100%;
     position: fixed;
     z-index: 1000;
-    left: 255px;
+    //left: 255px;
   }
 }
 @media screen and (max-width:1600px){
@@ -435,7 +417,7 @@
     width: 100%;
     position: fixed;
     z-index: 1000;
-    left: 280px;
+    //left: 280px;
   }
 }
 @media screen and (max-width:1280px){
@@ -443,7 +425,7 @@
     width: 100%;
     position: fixed;
     z-index: 1000;
-    left: 230px;
+    //left: 230px;
   }
 }
 @media screen and (max-width:1920px){
@@ -451,6 +433,180 @@
     width: 100%;
     position: fixed;
     z-index: 1000;
-    left: 330px;
+    //left: 330px;
   }
+}
+
+.input1 {
+  color: #00186D;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19px;
+  box-sizing: border-box;
+  text-align: center;
+  width: 24px;
+  height: 24px;
+  background: #FFFFFF;
+  border: none;
+  border-radius: 3px;
+}
+
+.no-focus {
+  &:focus {
+    outline: none; /* Ensure no outline on focus */
+    box-shadow: none; /* Remove box-shadow */
+  }
+}
+
+.page-number {
+  color: #00186D;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19px;
+}
+
+.tru {
+  width: 24px; 
+  height: 24px;
+}
+
+.col-md-9-tru {
+  width: calc(75% - 24px); /* 75% is the width of col-md-9 */
+}
+
+.col-md-12-tru {
+  width: calc(100% - 24px);
+}
+
+.no-focus {
+  &:focus {
+    outline: none; /* Ensure no outline on focus */
+    box-shadow: none; /* Remove box-shadow */
+  }
+}
+
+:host ::ng-deep {
+  .p-dropdown, .p-multiselect {
+    border: 1px solid #E6EDFA;
+    border-radius: 5px;
+    height: 24px;
+    width: 100%;
+    outline: 0;
+    color: #00186D !important;
+    position: relative;
+    display: flex; /* Ensure proper alignment */
+    align-items: center; /* Vertically align items */
+  }
+
+  .p-dropdown-label {
+    display: flex; /* Ensure alignment of label content */
+    align-items: center; /* Center the text vertically */
+    padding: 0 10px; /* Adjust padding as needed */
+    height: 100%; /* Ensure the height is consistent */
+  }
+
+  .p-dropdown-label::after, .p-multiselect-label::after {
+    content: '';
+    background-image: url('../../../../../assets/img/arrow-down.png'); /* Replace with your image URL */
+    background-size: 24px 24px;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 5px; /* Adjust to position the icon correctly */
+    top: 50%;
+    transform: translateY(-50%);
+    width: 24px;
+    height: 24px;
+  }
+
+  .p-dropdown .p-dropdown-trigger, .p-multiselect .p-multiselect-trigger {
+    display: none; /* Hide the default dropdown icon */
+  }
+  
+  .p-multiselect .p-multiselect-label.p-placeholder, .p-dropdown .p-dropdown-label.p-placeholder {
+    color: #AEC7E5 !important;
+    font-size: 12px !important;
+    font-weight: 500;
+    line-height: 21px; /* Adjust line-height for proper vertical alignment */
+  }
+}
+
+.label {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 18px;
+  color: #00186D;
+}
+
+.title-contract {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 15px;
+  color: #8E9AB0;
+  white-space: nowrap;
+}
+
+.contract-name {
+  font-weight: 700 !important;
+  font-size: 13px !important;
+  line-height: 18px !important;
+  color: #0041C4 !important;
+}
+
+.info-contract {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 15px;
+  color: #00186D;
+}
+
+a.info-contract {
+  text-decoration: none;
+  display: inline-block;
+  max-width: 104px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  box-sizing: border-box;
+}
+
+.content-info-contract {
+  border: 1px solid #E6EDFA;
+  border-radius: 3px;
+  display: inline-block;
+  max-width: 120px;
+  overflow: hidden;
+  padding: 4px 8px 0px 8px;
+  background-color: #F7FAFD;
+}
+
+.content-info-contract:hover {
+  border: 1px solid #286CF5 !important;
+}
+
+@media (max-width: 1199.98px) {
+  .mt-lg-5px {
+    margin-top: 5px !important;
+  }
+}
+
+.process-handle-contract {
+  border: 1px solid #E6EDFA;
+  padding: 16px 8px 16px 16px;
+  border-radius: 8px;
+  background-color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #0041C4;
+  display: flex; /* Enable Flexbox */
+  justify-content: space-between; /* Space items between start and end */
+  align-items: center; /* Center items vertically */
+}
+
+.process-handle-contract:hover {
+  border: 1px solid #286CF5 !important;
+}
+
+.process-handle-contract img {
+  width: 24px; /* Maintain aspect ratio */
 }
