--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -1,4 +1,4 @@
-<div class="footer-contract" *ngIf="this.datas.is_data_contract.status == 20 && this.datas.is_data_contract.release_state == 'CON_HIEU_LUC' && this.mobile === false">
+<div [ngStyle]="{'width': this.datas.hideInfo == true ? '99%' : '73.5%'}" class="footer-contract" *ngIf="this.datas.is_data_contract.status == 20 && this.datas.is_data_contract.release_state == 'CON_HIEU_LUC' && this.mobile === false">
   <div class="btn_footer">
     <div class="label">
       <button *ngIf="!this.is_show_coordination && !view && this.lang" type="button" name="next" class="next action-button" (click)="processingAuthorization()">{{'authorization' | translate}}</button>
@@ -8,7 +8,7 @@
       <button *ngIf="!this.is_show_coordination && !view && !this.lang" type="button" name="next" class="next action-button" (click)="forWardContract()">{{'Chuyển tiếp' | translate}}</button>
     </div>
 
-    <a style="text-align: center; margin-top: 5px;">
+    <a *ngIf = "this.datas.showPage != false" style="text-align: center; margin-top: 5px;">
       <button class="call-page" (click)="firstPage()">
         <!-- <img width="16px" height="20px" *ngIf="this.page1" src="assets/img/previousbold.svg"> -->
         <img  width="16px" height="20px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
