--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -9,44 +9,44 @@
           </div>                       
           <div>
             <div class="row mt-12px">
-              <div class="col-xl-3 col-lg-12 title-contract">{{'Tên hợp đồng' | translate}}:</div>
-              <div class="col-xl-9 col-lg-12 info-contract contract-name mt-lg-5px">{{datas?.is_data_contract?.name}}</div>
+              <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'Tên hợp đồng' | translate}}:</div>
+              <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract contract-name mt-lg-5px">{{datas?.is_data_contract?.name}}</div>
             </div>
             <div class="row mt-12px">
-              <div class="col-xl-3 col-lg-12 title-contract">{{'contract.uid' | translate}}:</div>
-              <div class="col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas?.is_data_contract?.contract_uid}}</div>
+              <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'contract.uid' | translate}}:</div>
+              <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas?.is_data_contract?.contract_uid}}</div>
             </div>
             <div class="row mt-12px">
-              <div class="col-xl-3 col-lg-12 title-contract">{{'menu.contract.type.list' | translate}}:</div>
-              <div class="col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas?.is_data_contract?.type_name}}</div>
+              <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'menu.contract.type.list' | translate}}:</div>
+              <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas?.is_data_contract?.type_name}}</div>
             </div>
             <div class="row mt-12px">
-              <div class="col-xl-3 col-lg-12 title-contract">{{'contract.number' | translate}}:</div>
-              <div class="col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas.is_data_contract.contract_no}}</div>
+              <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'contract.number' | translate}}:</div>
+              <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px">{{datas.is_data_contract.contract_no}}</div>
             </div>
             <div class="row mt-12px" *ngIf = "allFileAttachment.length > 0">
-              <div class="col-xl-3 col-lg-12 title-contract">{{'file.attach' | translate}}:</div>
-                <div class="col-xl-9 col-lg-12 mt-lg-5px">
+              <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'file.attach' | translate}}:</div>
+                <div class="custom-xl-width-col-xl-9 col-lg-12 mt-lg-5px">
                   <div *ngFor="let d of allFileAttachment; let i = index" style="margin-right: 5px;" class="content-info-contract">
                     <a class="info-contract" rel="stylesheet" [href]="d.path" target="_blank">{{d.filename}}</a>
                 </div>
               </div>
             </div>    
             <div class="row mt-12px" *ngIf="datas.is_data_contract.originalContractId">
-              <span class="col-xl-3 col-lg-12 title-contract">{{'contract.original' | translate}}:</span>
-              <span class="col-xl-9 col-lg-12 info-contract mt-lg-5px" (click)="openDetailOriginalContract(this.datas.is_data_contract)">
+              <span class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'contract.original' | translate}}:</span>
+              <span class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px" (click)="openDetailOriginalContract(this.datas.is_data_contract)">
                 {{datas.is_data_contract.original_contract_name}}
               </span>
             </div>
             <div class="row mt-12px" *ngIf="(datas.is_data_contract.status == 40 || datas.is_data_contract.status == 30) && ([20,30].includes(this.liquidationContractData?.status)) && ((datas.is_data_contract.liquidationContractId && datas.is_data_contract.liquidation_contract_name) || datas.is_data_contract.originalContractId)">
-              <span class="col-xl-3 col-lg-12 title-contract">{{'contract.liquidated' | translate}}:</span>
-              <span class="col-xl-9 col-lg-12 info-contract mt-lg-5px" (click)="openDetailLiquidatedContract(this.datas.is_data_contract)">
+              <span class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'contract.liquidated' | translate}}:</span>
+              <span class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px" (click)="openDetailLiquidatedContract(this.datas.is_data_contract)">
                 {{datas.is_data_contract.liquidation_contract_name}}
               </span>
             </div>
             <div class="row mt-12px" *ngIf = "datas?.is_data_contract?.refs.length > 0">
-              <div class="col-xl-3 col-lg-12 title-contract">{{'contract.connect.detail' | translate}}:</div>
-                <div class="col-xl-9 col-lg-12 mt-lg-5px">
+              <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'contract.connect.detail' | translate}}:</div>
+                <div class="custom-xl-width-col-xl-9 col-lg-12 mt-lg-5px">
                   <div *ngFor="let d of datas?.is_data_contract?.refs;let i = index" style="margin-right: 5px;" class="content-info-contract">
                     <a class="info-contract" rel="stylesheet" [href]="d.path" target="_blank" (click)="openPdf(d.path, $event)">{{d.ref_name}}</a>
                 </div>
@@ -60,13 +60,13 @@
             <div class="label">{{'relate.party' | translate}}</div>
             <div *ngFor="let d of this.datas?.is_data_contract?.participants">
               <div *ngIf = "d.type != 3" class="row mt-12px">
-                <div class="col-xl-3 col-lg-12 title-contract">{{'organization.me' | translate}}:</div>
-                <div class="col-xl-9 col-lg-12 info-contract mt-lg-5px">{{d.type != 3 ? d.name : d.recipients[0].name}}</div>
+                <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'organization.me' | translate}}:</div>
+                <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px">{{d.type != 3 ? d.name : d.recipients[0].name}}</div>
               </div>
 
               <div *ngIf = "d.type == 3" class="row mt-12px">
-                <div class="col-xl-3 col-lg-12 title-contract">{{'doi_tac' | translate}}:</div>
-                <div class="col-xl-9 col-lg-12 info-contract mt-lg-5px">{{d.type != 3 ? d.name : d.recipients[0].name}}</div>
+                <div class="custom-xl-width-col-xl-3 col-lg-12 title-contract">{{'doi_tac' | translate}}:</div>
+                <div class="custom-xl-width-col-xl-9 col-lg-12 info-contract mt-lg-5px">{{d.type != 3 ? d.name : d.recipients[0].name}}</div>
               </div>
             </div>
     
